Added a few features including authentication